--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: bash make.sh
       - id: set-matrix
-        run: echo "::set-output name=matrix::$(find . -maxdepth 1 -mindepth 1 -type d -not -name _common -not -name .git -not -name out -printf '%f\n' | jq -R -s -c 'split("\n")[:-1]')"
+        run: echo "::set-output name=matrix::$(find . -maxdepth 1 -mindepth 1 -type d -not -name .github -not -name _common -not -name .git -not -name out -printf '%f\n' | jq -R -s -c 'split("\n")[:-1]')"
   build-image:
     name: Build and push image
     needs: [list-hats]
