--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,7 +95,7 @@ jobs:
           build-args: |
             HAT=${{ matrix.hat }}
             VERSION=${{ steps.trunkver.outputs.trunkver }}
-            BASE_IMAGE=${{ steps.fedora.outputs.fedora-digest }}@${{ steps.fedora.outputs.fedora-digest }}
+            BASE_IMAGE=${{ env.FEDORA_BASE_IMAGE }}@${{ steps.fedora.outputs.fedora-digest }}
           extra-args: |
             --cache-from=${{ env.IMAGE_REGISTRY }}/${{ github.event.repository.name }}-cache
             --cache-to=${{ env.IMAGE_REGISTRY }}/${{ github.event.repository.name }}-cache
