--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Generate trunkver
         id: trunkver
-        uses: crftd-tech/trunkver@main
+        uses: crftd-tech/trunkver@b6a3d37ea52488205de16a7dd7d05a3bcae50882 # main
         with:
           baseVersion: ${{ steps.fedora.outputs.fedora-version }}
           prerelease: true
