--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,9 +93,8 @@ jobs:
       - name: Generate throaway temp keys for anyone else
         if: github.ref != 'refs/heads/main'
         run: |
-          openssl genpkey -algorithm EC -pkeyopt ec_paramgen_curve:P-256 > ./tmp/kernel_signing_key/kernel_signing_certificate_key.pem
-          openssl req -x509 -key ./tmp/kernel_signing_key/kernel_signing_certificate_key.pem -subj /CN=github.com/CN=rradczewski/CN=hatter/CN=CI_THROAWAY_KEY_DO_NOT_TRUST > ./tmp/kernel_signing_key/kernel_signing_certificate_key.pem
-          openssl x509 -in ./tmp/kernel_signing_key/kernel_signing_certificate_key.pem -inform PEM -out ./tmp/kernel_signing_key/kernel_signing_certificate_key.der -outform DER
+          openssl genpkey -algorithm EC -pkeyopt ec_paramgen_curve:P-256 > ./tmp/kernel_signing_key/kernel_signing_certificate_key.key
+          openssl req -x509 -key ./tmp/kernel_signing_key/kernel_signing_certificate_key.key -subj /CN=github.com/CN=rradczewski/CN=hatter/CN=CI_THROAWAY_KEY_DO_NOT_TRUST > ./tmp/kernel_signing_key/kernel_signing_certificate_key.pem
 
       - name: Build Image
         id: build_image
